# demorepo

./: .readthedocs.yaml  LICENSE  README.md  meson.build  pyproject.toml
calculator/: __init__.py  calculator.py  meson.build
calculator/utils/: __init__.py  meson.build  utils.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  unittests.rst  usage.ipynb
tests/: test_arithmetic.py  test_inputs.py
